--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -13,17 +13,17 @@
 
   <body>
     <div class="container">
+      <span>HORIZONTAL-LABS</span>
       <header class="header">
         <nav role="navigation">
           <ul class="nav nav-pills pull-right">
             <li>
               <%= link "Register", to: user_path(@conn, :new) %>
-              <a href="http://www.phoenixframework.org/docs">Get Started</a>
             </li>
           </ul>
         </nav>
-        <span class="logo"></span>
       </header>
+
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
